--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "9.1.3",
+    "node-sass": "^4.13.0",
     "react": "16.11.0",
     "react-dom": "16.11.0"
   }
