added font-awesome icons

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -6,6 +6,7 @@
     "no-unused-vars": "warn",
     "no-console": "off",
     "func-names": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-props-no-spreading": [{ "custom": "ignore" }]
   }
 }
