--- a/api-server/package.json
+++ b/api-server/package.json
@@ -15,6 +15,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-rate-limit": "^5.0.0",
 		"helmet": "^3.21.2",
 		"mocha": "^6.2.2",
 		"mongodb": "^3.3.3",
