--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "next": "9.1.3",
     "node-sass": "^4.13.0",
     "react": "16.11.0",
-    "react-dom": "16.11.0"
+    "react-dom": "16.11.0",
+    "sass-resources-loader": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
