--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@zeit/next-sass": "^1.0.1",
     "dotenv": "^8.2.0",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.3",
     "node-sass": "^4.13.0",
     "react": "16.11.0",
