--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 api-server/node_modules/
-node_modules/
 api-server/.vscode/
 api-server/package-lock.json
 api-server/.env
+node_modules/
+.vscode/
+package-lock.json
+.env
