--- a/package.json
+++ b/package.json
@@ -3,6 +3,25 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"start": "npm i ./api-server/ & node ./api-server/app.js"
+		"start": "node ./api-server/app.js",
+		"server": "node ./api-server/app.js",
+		"dev": "nodemon app.js"
+	},
+	"dependencies": {
+		"bcrypt": "^3.0.6",
+		"body-parser": "^1.19.0",
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
+		"client-sessions": "^0.8.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-rate-limit": "^5.0.0",
+		"helmet": "^3.21.2",
+		"mocha": "^6.2.2",
+		"mongodb": "^3.3.3",
+		"mongoose": "^5.7.9",
+		"morgan": "^1.9.1",
+		"morgan-body": "^2.4.8"
 	}
 }
