first deployment successful

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
 	"name": "message-board",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"private": true,
 	"scripts": {
 		"start": "node ./api-server/app.js",
-		"server": "node ./api-server/app.js",
-		"dev": "nodemon app.js"
+		"server": "node ./api-server/app.js"
 	},
 	"dependencies": {
 		"bcrypt": "^3.0.6",
