--- a/api-server/package.json
+++ b/api-server/package.json
@@ -20,7 +20,11 @@
 		"mocha": "^6.2.2",
 		"mongodb": "^3.3.3",
 		"mongoose": "^5.7.9",
+		"mongoose-unique-validator": "^2.0.3",
 		"morgan": "^1.9.1",
 		"morgan-body": "^2.4.8"
+	},
+	"devDependencies": {
+		"nodemon": "^1.19.4"
 	}
 }
