--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@zeit/next-sass": "^1.0.1",
     "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "next": "9.1.3",
+    "next-cookies": "^2.0.2",
     "node-sass": "^4.13.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
