--- a/api-server/package.json
+++ b/api-server/package.json
@@ -12,6 +12,7 @@
 		"chai": "^4.2.0",
 		"chai-http": "^4.3.0",
 		"client-sessions": "^0.8.0",
+		"cookie-parser": "^1.4.4",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
