--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,8 @@
     "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.3",
-    "next-cookies": "^2.0.2",
     "node-sass": "^4.13.0",
+    "nookies": "^2.0.8",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "sass-resources-loader": "^2.0.1"
