--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -8,6 +8,8 @@
     "react/prop-types": [0],
     "no-unused-vars": "warn",
     "no-console": "off",
-    "func-names": "off"
+    "func-names": "off",
+    "no-use-before-define": ["error", { "functions": false }],
+    "no-underscore-dangle": ["error", { "allow": true }]
   }
 }
