--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "nookies": "^2.0.8",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-select": "^3.0.8",
     "sass-resources-loader": "^2.0.1"
   },
   "devDependencies": {
