--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,6 +10,14 @@
     "no-console": "off",
     "func-names": "off",
     "no-use-before-define": ["error", { "functions": false }],
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": ["Link"],
+        "specialLink": ["hrefLeft", "hrefRight"],
+        "aspects": ["invalidHref"]
+      }
+    ]
   }
 }
