--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@zeit/next-sass": "^1.0.1",
+    "clsx": "^1.0.4",
     "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.3",
