--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,13 @@
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-select": "^3.0.8",
-    "sass-resources-loader": "^2.0.1"
+    "sass-resources-loader": "^2.0.1",
+    "slate": "^0.57.1",
+    "slate-react": "^0.57.1"
   },
   "devDependencies": {
+    "@types/node": "^13.1.2",
+    "@types/react": "^16.9.17",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
@@ -34,7 +38,8 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.3",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.4"
   },
   "husky": {
     "hooks": {
