--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -20,5 +20,12 @@
         "aspects": ["invalidHref"]
       }
     ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
   }
 }
