--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@zeit/next-sass": "^1.0.1",
     "clsx": "^1.0.4",
     "dotenv": "^8.2.0",
+    "is-hotkey": "^0.1.6",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.3",
     "node-sass": "^4.13.0",
