--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@react-hook/window-size": "^1.0.12",
     "@zeit/next-sass": "^1.0.1",
     "clsx": "^1.0.4",
     "dotenv": "^8.2.0",
@@ -20,6 +21,7 @@
     "node-sass": "^4.13.0",
     "nookies": "^2.0.8",
     "react": "16.11.0",
+    "react-device-detect": "^1.11.14",
     "react-dom": "16.11.0",
     "react-select": "^3.0.8",
     "sass-resources-loader": "^2.0.1",
