--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-select": "^3.0.8",
     "sass-resources-loader": "^2.0.1",
     "slate": "^0.57.1",
+    "slate-history": "^0.57.1",
     "slate-react": "^0.57.1"
   },
   "devDependencies": {
