--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-hook/window-size": "^1.0.12",
     "@zeit/next-sass": "^1.0.1",
     "clsx": "^1.0.4",
+    "dayjs": "^1.8.19",
     "dotenv": "^8.2.0",
     "is-hotkey": "^0.1.6",
     "isomorphic-unfetch": "^3.0.0",
