--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@react-hook/window-size": "^1.0.12",
+    "@types/react-color": "^3.0.1",
     "@zeit/next-sass": "^1.0.1",
     "clsx": "^1.0.4",
     "dayjs": "^1.8.19",
@@ -22,6 +23,7 @@
     "node-sass": "^4.13.1",
     "nookies": "^2.0.8",
     "react": "16.11.0",
+    "react-color": "^2.18.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "16.11.0",
     "react-select": "^3.0.8",
