changed precommit from prettier to eslint due to [] folder problems

--- a/client/package.json
+++ b/client/package.json
@@ -55,8 +55,8 @@
     }
   },
   "lint-staged": {
-    "*.{js,json,css,scss}": [
-      "prettier --write",
+    "*.{js,tsx,css,scss}": [
+      "eslint --fix",
       "git add"
     ]
   }
