edited some settings to deploy on now

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -36,15 +36,15 @@
     "import/prefer-default-export": "off",
     "@typescript-eslint/explicit-function-return-type": "off"
   },
-  "overrides": [
-    {
-      // enable the rule specifically for TypeScript files
-      "files": ["*.ts", "*.tsx"],
-      "rules": {
-        "@typescript-eslint/explicit-function-return-type": ["error"]
-      }
-    }
-  ],
+  // "overrides": [
+  //   {
+  //     // enable the rule specifically for TypeScript files
+  //     "files": ["*.ts", "*.tsx"],
+  //     "rules": {
+  //       "@typescript-eslint/explicit-function-return-type": ["error"]
+  //     }
+  //   }
+  // ],
   "settings": {
     "import/resolver": {
       "node": {
