updated auth to use nextjs api routes

--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,13 @@
     "@types/react-color": "^3.0.1",
     "@zeit/next-sass": "^1.0.1",
     "clsx": "^1.1.0",
+    "cookie": "^0.4.0",
     "dayjs": "^1.8.23",
     "dotenv": "^8.2.0",
     "is-hotkey": "^0.1.6",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.2.2",
     "node-sass": "^4.13.1",
-    "nookies": "^2.1.1",
     "react": "16.13.0",
     "react-color": "^2.18.0",
     "react-device-detect": "^1.11.14",
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@svgr/cli": "^5.2.0",
+    "@types/cookie": "^0.3.3",
     "@types/node": "^13.9.1",
     "@types/react": "^16.9.23",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
