--- a/api-server/package.json
+++ b/api-server/package.json
@@ -9,14 +9,17 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
     "http-errors": "^1.7.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.9",
     "mongoose-unique-validator": "^2.0.3",
-    "morgan-body": "^2.4.8"
+    "morgan-body": "^2.4.8",
+    "uid-safe": "^2.1.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
