--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@react-hook/window-size": "^1.0.13",
-    "@types/react-color": "^3.0.1",
     "@zeit/next-sass": "^1.0.1",
     "clsx": "^1.1.0",
     "cookie": "^0.4.0",
@@ -20,6 +19,7 @@
     "dotenv": "^8.2.0",
     "is-hotkey": "^0.1.6",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "next": "9.2.2",
     "node-sass": "^4.13.1",
     "react": "16.13.0",
@@ -35,8 +35,10 @@
   "devDependencies": {
     "@svgr/cli": "^5.2.0",
     "@types/cookie": "^0.3.3",
+    "@types/js-cookie": "^2.2.5",
     "@types/node": "^13.9.1",
     "@types/react": "^16.9.23",
+    "@types/react-color": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
