--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@react-hook/window-size": "^1.0.13",
-    "@zeit/next-sass": "^1.0.1",
     "clsx": "^1.1.0",
     "cookie": "^0.4.0",
     "dayjs": "^1.8.23",
@@ -20,14 +19,13 @@
     "is-hotkey": "^0.1.6",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
-    "next": "9.2.2",
-    "node-sass": "^4.13.1",
-    "react": "16.13.0",
+    "next": "^9.3.1",
+    "react": "^16.13.1",
     "react-color": "^2.18.0",
     "react-device-detect": "^1.11.14",
-    "react-dom": "16.13.0",
+    "react-dom": "^16.13.1",
     "react-select": "^3.0.8",
-    "sass-resources-loader": "^2.0.1",
+    "sass": "^1.26.3",
     "slate": "^0.57.1",
     "slate-history": "^0.57.1",
     "slate-react": "^0.57.1"
