--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-color": "^2.18.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-select": "^3.0.8",
     "sass": "^1.26.3",
     "slate": "^0.57.1",
@@ -37,6 +38,7 @@
     "@types/node": "^13.9.1",
     "@types/react": "^16.9.23",
     "@types/react-color": "^3.0.1",
+    "@types/react-modal": "^3.10.5",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
